--- a/03-multi-play.yaml
+++ b/03-multi-play.yaml
@@ -8,3 +8,11 @@
   - name: palybook-1 and task-02 
     ansible.builtin.debug: 
      msg: "play-01 and task-02"
+
+  - name: palybook-02 and task-01 
+    ansible.builtin.debug:
+     msg: "play-02 and task-01"
+
+  - name: palybook-2 and task-02 
+    ansible.builtin.debug: 
+     msg: "play-02 and task-02"
