--- a/04-paly-vars.yaml
+++ b/04-paly-vars.yaml
@@ -8,4 +8,4 @@
   tasks: 
   - name: print play level vars 
     ansible.builtin.debug: 
-     msg: "Course name is: {{ COURSE }}, Duration is: {{ DURATION }}, and Trainer is: {{ TRAINER }}"
+     msg: "Course name is: {{ COURSE }}, Duration is: {{ DURATION }}, and Trainer is: {{ Trainer }}"
