--- a/07-vars-prompt.yaml
+++ b/07-vars-prompt.yaml
@@ -7,7 +7,7 @@
     private: false 
   - name: password 
     prompt: what is your password? 
-    private: false 
+    private: true 
   tasks: 
   - name: Print throgh prompt 
     ansible.builtin.debug: 
