--- a/08-vars-inventory.yaml
+++ b/08-vars-inventory.yaml
@@ -1,9 +1,7 @@
-- name: varfile variables 
+- name: Inventory file variables 
   hosts: local 
   connection: local # Ansible is connecting to localhost
-  vars_files:
-  - inventory.yaml
   tasks: 
-  - name: print var file variables
+  - name: print inventory file variables
     ansible.builtin.debug: 
      msg: "Course name is: {{ COURSE }}, Duration is: {{ DURATION }}, and Trainer is: {{ Trainer }}"
