--- a/09-vars-args.yaml
+++ b/09-vars-args.yaml
@@ -5,3 +5,5 @@
   - name: print inventory file variables
     ansible.builtin.debug: 
      msg: "Course name is: {{ COURSE }}, Duration is: {{ DURATION }}, and Trainer is: {{ TRAINER }}"
+
+#ansible-playbook -i inventory.ini -e user_name=ec2-user -e user_password=DevOps321 -e "COURSE=DevOps" -e "TRAINER=Siva" -e "DURATION=110hrs" 09-vars-args.yaml
