--- a/10-vars-preference.yaml
+++ b/10-vars-preference.yaml
@@ -2,15 +2,12 @@
   hosts: local 
   connection: local # Ansible is connecting to localhost
   vars: 
-    COURSE: Ansible
-    DURATION: 10HRS
-    Trainer: Sivakumar reddy
+    NAME: From play level
   vars_files:
   - course.yaml
   tasks: 
   - name: print play level vars 
-    COURSE: Ansible
-    DURATION: 10HRS
-    Trainer: Sivakumar reddy
+    vars: 
+     NAME: from task level
     ansible.builtin.debug: 
-     msg: "Course name is: {{ COURSE }}, Duration is: {{ DURATION }}, and Trainer is: {{ Trainer }}"
+     msg: "Name: {{ NAME }}"
