--- a/10-vars-preference.yaml
+++ b/10-vars-preference.yaml
@@ -1,4 +1,4 @@
-- name: play level variables 
+- name: Variable preference
   hosts: local 
   connection: local # Ansible is connecting to localhost
   vars: 
@@ -10,8 +10,8 @@
     prompt: please enter your NAME ?
     private: false
   tasks: 
-  - name: print play level vars 
-    vars: 
-     NAME: from task level
+  - name: print variables 
+    # vars: 
+    #  NAME: from task level
     ansible.builtin.debug: 
      msg: "Name: {{ NAME }}"
