--- a/12-conditions.yaml
+++ b/12-conditions.yaml
@@ -6,5 +6,5 @@
   tasks: 
   - name: check the number is less than 10 or not
     ansible.builtin.debug: 
-     msg: "Given number is: {{ number }} less than 10 or not"
+     msg: "Given number is: {{ number }} less than 10"
     when: number < 10
