--- a/16-loops-packages.yaml
+++ b/16-loops-packages.yaml
@@ -1,8 +1,9 @@
 - name: loops 
   hosts: local
   connection: local 
+  become: yes
   tasks:
-  - name: print names 
+  - name: Installing packages 
     ansible.builtin.package:
      name: "{{ item }}"
      state: latest  
