--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -1,5 +1,6 @@
 - name: Functions 
-  hosts: local 
+  hosts: local
+  connection: local 
   tasks: 
   - name: Print Default variable 
     ansible.builtin.debug: 
