--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -4,4 +4,4 @@
   tasks: 
   - name: Print Default variable 
     ansible.builtin.debug: 
-     msg: "Hello, {{ name  }}"
+     msg: "Hello, {{ name | default ('Ramesh')  }}"
