--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -1,7 +1,13 @@
 - name: Functions 
   hosts: local
   connection: local 
+  vars:
+   technologies: Devops, Linux, Shell, Ansible 
   tasks: 
   - name: Print Default variable 
     ansible.builtin.debug: 
      msg: "Hello, {{ name | default ('Ramesh')  }}"
+
+  - name: print string to list 
+    ansible.builtin.debug: 
+     msg: "Technologies are {{ technologies | split(,) }}"
