--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -2,7 +2,7 @@
   hosts: local
   connection: local 
   vars:
-   technologies: Devops, Linux, Shell, Ansible 
+   technologies: Devops, Linux, Shell, Ansible # string
   tasks: 
   - name: Print Default variable 
     ansible.builtin.debug: 
@@ -10,4 +10,4 @@
 
   - name: print string to list 
     ansible.builtin.debug: 
-     msg: "Technologies are {{ technologies | split(,) }}"
+     msg: "Technologies are {{ technologies | split(',') }}"
