--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -21,4 +21,4 @@
 
   - name: print map to list 
     ansible.builtin.debug: 
-     msg: "tags are: {{ tags | dic2items }}"
+     msg: "tags are: {{ tags | dict2items }}"
