--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -36,4 +36,4 @@
 
   - name: read yaml and take it into a variable 
     ansible.builtin.set_fact:
-     msg: "tags are: {{ lookup('file', 'student.yaml') | from_yaml }}
+     student_yaml: {{ lookup('file', 'student.yaml') | from_yaml }}
