--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -37,3 +37,7 @@
   - name: read yaml and take it into a variable 
     ansible.builtin.set_fact:
      student_yaml: "{{ lookup('file', 'student.yaml') | from_yaml }}"
+
+  - name: convert yaml into json
+    ansible.builtin.debug: 
+     msg: "json: {{ student_yaml | to_json }}" # list to map 
