--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -40,4 +40,9 @@
 
   - name: convert yaml into json
     ansible.builtin.debug: 
-     msg: "json: {{ student_yaml | to_json }}" # list to map 
+     msg: "json: {{ student_yaml | to_json }}" 
+
+  - name: save json to file 
+    ansible.builtin.copy:
+      dest: ./student-data.json
+      content: {{ student_yaml | to_nice_json }}
