--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -59,9 +59,11 @@
   - name: check IP is valid or not
     ansible.builtin.debug: 
       msg: "{{ ipaddress | ansible.utils.ipv4 }}"
-
+  
+  # command vs shell
   - name: grep for root 
-    ansible.builtin.command: cat /etc/passwd | grep root
+    #ansible.builtin.command: cat /etc/passwd | grep root
+    ansible.builtin.shell: cat /etc/passwd | grep root
     register: command_output
 
   - name: print the command_output 
