--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -71,8 +71,9 @@
      msg: "{{ command_output }}"
 
   - name: redirect the output 
-    ansible.builtin.command: ls -ltr &> /tmp/output.txt 
-    register: redirect_output 
+    ansible.builtin.command: ls -ltr > /tmp/output.txt 
+    register: redirect_output
+    ignore_errors: true  
 
   - name: print the redirect output 
     ansible.builtin.debug: 
