--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -78,4 +78,13 @@
   - name: print the redirect output 
     ansible.builtin.debug: 
      msg: "{{ redirect_output }}"
+
+  - name: redirect the output 
+    ansible.builtin.shell: ls -ltr > /tmp/output.txt 
+    register: redirect_output
+    ignore_errors: true  
+
+  - name: print the redirect output 
+    ansible.builtin.debug: 
+     msg: "{{ redirect_output }}"
      
