--- a/19-error-handling.yaml
+++ b/19-error-handling.yaml
@@ -13,4 +13,4 @@
 
   - name: user creation 
     ansible.builtin.command: useradd roboshop
-    when: user_output.rc = 0
+    when: user_output.rc != 0
