--- a/inventory.ini
+++ b/inventory.ini
@@ -5,7 +5,11 @@
 localhost
 
 [keys]
-3.91.154.1
+172.31.17.250
+
+[all:vars]
+ansible_user=ec2-user
+ansible_password=DevOps321
 
 [local:vars]
 COURSE=Ansible
